Fix background image on mobile devices.

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -4,13 +4,24 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-business-casual/blob/master/LICENSE)
  */
 
+ body:before {
+   content: "";
+   display: block;
+   position: fixed;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   z-index: -10;
+   background: url('../img/bg.jpg') no-repeat center center;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+ }
+
 body {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    background: url('../img/bg.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
 }
 
 h1,
